# soul-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  VERSION.md  pyproject.toml
.github/workflows/: publish.yml
examples/: adammalove.md  claude.md  claude_vs_grok.md  grok.md
references/: analysis.md  questions.md  questions_new_agent.md
scripts/: generate_soul.py  soul_diff.py
soul_engine/: generate_soul.py  soul_diff.py
soul_engine_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
