[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "soul-engine-ai"
version = "1.2.0"
description = "Identity discovery for AI agents"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
soul-engine = "soul_engine.generate_soul:main"
soul-diff = "soul_engine.soul_diff:main"

[tool.setuptools.packages.find]
where = ["."]
